--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h2>Exercises</h2>
   <ol>
-  	<li><a href="exercise1">House of Dust</a></li>
+  	<li><a href="exercise1/index.html">House of Dust</a></li>
   </ol>
 
   <h2>Projects</h2>
