--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <title>Isaac Morrier's class homepage</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 </head>
 
 <body>
 
-  <h1>Isaac Morrier’s Web Juvenilia</h1>
+  <h1>isaac morrier’s web juvenilia</h1>
 
-  <h2>Exercises</h2>
+  <h2>exercises</h2>
   <ol>
-  	<li><a href="exercise1/index.html">House of Dust</a></li>
+  	<li><a href="exercise1/">house of dust</a></li>
   </ol>
 
-  <h2>Projects</h2>
+  <h2>projects</h2>
   <ol>
-  	<li><a href="project1">Visual Translation</a></li>
-    <li><a href="project2">25 Variations</a></li>
+  	<li><a href="#">visual translation</a></li>
+    <li><a href="project2/">25 variations</a></li>
   </ol>
 
-  <h2>Interview</h2>
-  Coming soon!
+  <h2>interview</h2>
+  coming soon
 
 </body>
 	
