added link to visual translations

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h2>projects</h2>
   <ol>
-  	<li><a href="#">visual translation</a></li>
+  	<li><a href="https://aacdeeioprsssst.tumblr.com/">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
   </ol>
 
