css changes on homepage

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <body>
 
-  <h1>isaac morrier’s web juvenilia</h1>
+  <p>isaac morrier’s web juvenilia</p>
 
-  <h2>exercises</h2>
+  <p>exercises</p>
   <ol>
   	<li><a href="exercise1/">house of dust</a></li>
   </ol>
 
-  <h2>projects</h2>
+  <p>projects</p>
   <ol>
   	<li><a href="https://aacdeeioprsssst.tumblr.com/">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
   </ol>
 
-  <h2>interview</h2>
+  <p>interview</p>
   coming soon
 
 </body>
