--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
   <p>isaac morrier’s web juvenilia</p>
+  
+  <p><a href="http://spring2017.veryinteractive.net/calendar/">interactive design</a></p>
 
   <p>exercises</p>
   <ol>
