--- a/project2/variation01.html
+++ b/project2/variation01.html
@@ -7,5 +7,7 @@
   </head>
   <body>
    <p>haiku 237 i think i think too much Rafaël Rozendaal</p>
+    
+   <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: #ddd">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation02.html">&#8594;</a></p>
   </body>
 </html>
