--- a/project2/variation02.html
+++ b/project2/variation02.html
@@ -11,5 +11,7 @@
     <p>i think</p>
     <p>too much</p>
     <p>Rafaël Rozendaal</p>
+    
+    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation01.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation03.html">&#8594;</a></p>
   </body>
 </html>
