--- a/project2/variation05.html
+++ b/project2/variation05.html
@@ -109,5 +109,7 @@
       <br>
       <br>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rafaël Rozendaal</p>
+    
+     <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation04.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation06.html">&#8649;</a></p>
   </body>
 </html>
