--- a/project2/variation03.html
+++ b/project2/variation03.html
@@ -9,6 +9,14 @@
     <p>haiku 237
       <br>
       <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     i think
       <br>
     i think
@@ -17,5 +25,7 @@
       <br>
       <br>
     Rafaël Rozendaal</p>
+    
+     <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation02.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation04.html">&#8594;</a></p>
   </body>
 </html>
