added variations 8 to 10

--- a/project2/variation07.html
+++ b/project2/variation07.html
@@ -6,11 +6,11 @@
     <title>haiku 237 - Rafaël Rozendaal</title>
   </head>
   <body>
-    <p>haiku 237</p>
+    <h6>haiku 237</h6>
     <h1>i think</h1>
     <h3>i think</h3>
-    <h6>too much</h6>
-    <p><em>Rafaël Rozendaal</em></p>
+    <h5>too much</h5>
+    <h6>Rafaël Rozendaal</h6>
     
     <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation06.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation08.html">&#8594;</a></p>
   </body>
