changed visual translations link from tumblr to twitter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <p>projects</p>
   <ol>
-  	<li><a href="https://aacdeeioprsssst.tumblr.com/">visual translation</a></li>
+  	<li><a href="https://twitter.com/AacdeeioPrssst">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
   </ol>
 
