changed titles of projects to include "p1:" and "p2:"

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <p>projects</p>
   <ol>
-  	<li><a href="https://twitter.com/AacdeeioPrssst">visual translation</a></li>
-    <li><a href="project2/">25 variations</a></li>
+  	<li><a href="https://twitter.com/AacdeeioPrssst">p1: visual translation</a></li>
+    <li><a href="project2/">p2: 25 variations</a></li>
   </ol>
 
   <p>interview</p>
