added exercise 2: carl dier markup

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p>exercises</p>
   <ol>
   	<li><a href="exercise1/">house of dust</a></li>
+  	<li><a href="exercise2/">carl dier markup</a></li>
   </ol>
 
   <p>projects</p>
