--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <p>isaac morrier’s web juvenilia</p>
   
-  <p><a href="http://spring2017.veryinteractive.net/calendar/">interactive design</a></p>
+  <p><a href="http://spring2017.veryinteractive.net/calendar/">interactive design class home page</a></p>
 
   <p>exercises</p>
   <ol>
@@ -22,12 +22,14 @@
 
   <p>projects</p>
   <ol>
-  	<li><a href="https://twitter.com/AacdeeioPrssst">visual translation</a></li>
+  	<li><a href="https://twitter.com/AsrpbiauedOsdss">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
   </ol>
 
   <p>interview</p>
-  coming soon
+  <ul>
+    <li>coming soon</li>
+  </ul>
 
 </body>
 	
