added exercise3, styling Dair

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-    <title>Isaac Morrier's class homepage</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="assets/main.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+  <title>Isaac Morrier's class homepage</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="assets/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="assets/main.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 </head>
 
 <body>
