--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <ol>
   	<li><a href="exercise1/">house of dust</a></li>
   	<li><a href="exercise2/">carl dier markup</a></li>
+  	<li><a href="exercise3/">carl dier style</a></li>
   </ol>
 
   <p>projects</p>
