--- a/project2/index.html
+++ b/project2/index.html
@@ -20,7 +20,7 @@
         font-size: 1.25em
       }
       
-      ol li:nth-child(5){
+      ol li:nth-child(5n){
         padding-bottom: 1em;
       }
     </style>
@@ -41,6 +41,21 @@
       <li><a href="variation08.html">&#8599;</a></li>
       <li><a href="variation09.html">&#8599;</a></li>
       <li><a href="variation10.html">&#8599;</a></li>
+      <li><a href="variation11.html">&#8599;</a></li>
+      <li><a href="variation12.html">&#8599;</a></li>
+      <li><a href="variation13.html">&#8599;</a></li>
+      <li><a href="variation14.html">&#8599;</a></li>
+      <li><a href="variation15.html">&#8599;</a></li>
+      <li><a href="variation16.html">&#8599;</a></li>
+      <li><a href="variation17.html">&#8599;</a></li>
+      <li><a href="variation18.html">&#8599;</a></li>
+      <li><a href="variation19.html">&#8599;</a></li>
+      <li><a href="variation20.html">&#8599;</a></li>
+      <li><a href="variation21.html">&#8599;</a></li>
+      <li><a href="variation22.html">&#8599;</a></li>
+      <li><a href="variation23.html">&#8599;</a></li>
+      <li><a href="variation24.html">&#8599;</a></li>
+      <li><a href="variation25.html">&#8599;</a></li>
     </ol>
     
   </body>
