--- a/project2/variation03.html
+++ b/project2/variation03.html
@@ -10,6 +10,9 @@
       <br>
       <br>
       <br>
+      i think
+      <br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;i think
       <br>
       <br>
       <br>
@@ -17,11 +20,12 @@
       <br>
       <br>
       <br>
-    i think
       <br>
-    i think
       <br>
-    too much
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;too much
+      <br>
+      <br>
+      <br>
       <br>
       <br>
     Rafaël Rozendaal</p>
