standardized nav on 25 variations P2

--- a/project2/index.html
+++ b/project2/index.html
@@ -7,8 +7,7 @@
     
     <style>
       body {
-        background: #ffeebb;
-        margin: 75px;
+        margin: 4em;
         font-size: 1em;
         text-transform: lowercase;
         font-family: "Space Mono", "Courier New", Courier, monospace;
