--- a/project2/variation07.html
+++ b/project2/variation07.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
   <body>
     <h6>haiku 237</h6>
@@ -12,6 +13,6 @@
     <h5>too much</h5>
     <h6>Rafaël Rozendaal</h6>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation06.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation08.html">&#8594;</a></p>
+    <p class="nav"><a href="variation06.html">&#8592;</a> | <a href="variation08.html">&#8594;</a></p>
   </body>
 </html>
