--- a/project2/variation10.html
+++ b/project2/variation10.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
   <body>
  <h6 id="zero"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#one">haiku 237</a></h6>
@@ -509,6 +510,6 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#zero">Rafaël Rozendaal</a></h6>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation09.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation11.html">&#8649;</a></p>
+    <p class="nav"><a href="variation09.html">&#8592;</a> | <a href="variation11.html">&#8649;</a></p>
   </body>
 </html>
