--- a/project2/variation12.html
+++ b/project2/variation12.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
-    
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       body {
         margin: 0;
@@ -53,6 +53,6 @@
     <div class="master up-right"><div><div><div><div><div><div class="word"><p>i think<br>i think<br>too much</p></div></div></div></div></div></div></div>
     <div class="master down-left"><div><div><div><div><div><div class="word"><p>Rafaël Rozendaal</p></div></div></div></div></div></div></div>    
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation11.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation13.html">&#8594;</a></p>
+    <p class="nav"><a href="variation11.html">&#8592;</a> | <a href="variation13.html">&#8594;</a></p>
   </body>
 </html>
