--- a/project2/variation16.html
+++ b/project2/variation16.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       
       .container {
@@ -43,6 +44,6 @@
       <p class="l">too much</p>
     </div>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation15.html">&#8647;</a> | <a style="text-decoration: none; color: gray" href="variation17.html">&#8594;</a></p>
+    <p class="nav"><a href="variation15.html">&#8647;</a> | <a href="variation17.html">&#8594;</a></p>
   </body>
 </html>
