--- a/project2/variation19.html
+++ b/project2/variation19.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Frijole|Raleway+Dots" rel="stylesheet">
     
@@ -42,6 +43,6 @@
     <p class=buttons>
       <span class="button" id="one">i </span><span class="button" id="three">t</span><span class="button" id="four">h</span><span class="button" id="five">i</span><span class="button" id="six">n</span><span class="button" id="seven">k </span><span class="button" id="nine">i </span><span class="button" id="eleven">t</span><span class="button" id="twelve">h</span><span class="button" id="thirteen">i</span><span class="button" id="fourteen">n</span><span class="button" id="fifteen">k </span><span class="button" id="seventeen">t</span><span class="button" id="eighteen">o</span><span class="button" id="nineteen">o </span><span class="button" id="twentyone">m</span><span class="button" id="twentytwo">u</span><span class="button" id="twentythree">c</span><span class="button" id="twentyfour">h</span>
     </p>
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation18.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation20.html">&#8594;</a></p>
+    <p class="nav"><a href="variation18.html">&#8592;</a> | <a href="variation20.html">&#8594;</a></p>
   </body>
 </html>
