--- a/project2/variation21.html
+++ b/project2/variation21.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
     <link href="https://fonts.googleapis.com/css?family=Shrikhand|Space+Mono" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       
       body {
@@ -38,6 +39,6 @@
       <p class="poem">i think</p>
       <p class="poem">too much</p>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation20.html">&#8647;</a> | <a style="text-decoration: none; color: gray" href="variation22.html">&#8594;</a></p>
+    <p class="nav"><a href="variation20.html">&#8647;</a> | <a href="variation22.html">&#8594;</a></p>
   </body>
 </html>
