--- a/project2/variation24.html
+++ b/project2/variation24.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
     <link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       
       @keyframes animation1 {
@@ -137,6 +138,6 @@
       <div class="spin animation4"><div class="white"><div class="top-left tear"></div><div class="top-right tear"></div></div><div class="middle"><p class="c small">haiku 237<br>Rafaël Rozendaal</p></div><div class="white"><div class="bottom-left tear"></div><div class="bottom-right tear"></div></div></div>
     </div>
 
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation23.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation25.html">&#8594;</a></p>
+    <p class="nav"><a href="variation23.html">&#8592;</a> | <a href="variation25.html">&#8594;</a></p>
   </body>
 </html>
