--- a/project2/variation01.html
+++ b/project2/variation01.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
   <body>
    <p>haiku 237 i think i think too much Rafaël Rozendaal</p>
     
-   <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: #ddd">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation02.html">&#8594;</a></p>
+   <p class="nav"><a href="index.html">&#8601;</a> | <a href="variation02.html">&#8594;</a></p>
   </body>
 </html>
