--- a/project2/variation05.html
+++ b/project2/variation05.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
   <body>
     <p>haiku 237
@@ -109,7 +110,7 @@
       <br>
       <br>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rafaël Rozendaal</p>
-    
-     <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation04.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation06.html">&#8649;</a></p>
+    <p class="nav"><a href="variation04.html">&#8592;</a> | <a href="variation06.html">&#8649;</a></p>
+
   </body>
 </html>
