--- a/project2/variation06.html
+++ b/project2/variation06.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
   </head>
   <body>
     <p><strong>haiku 237</strong></p>
@@ -12,6 +13,6 @@
     <p>too much</p>
     <p><em>Rafaël Rozendaal</em></p>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation05.html">&#8647;</a> | <a style="text-decoration: none; color: gray" href="variation07.html">&#8594;</a></p>
+    <p class="nav"><a href="variation05.html">&#8647;</a> | <a href="variation07.html">&#8594;</a></p>
   </body>
 </html>
