--- a/project2/variation14.html
+++ b/project2/variation14.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
-    
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       
       .bordered {
@@ -23,6 +23,6 @@
     <h1 class="line bordered">i think</h1>
     <h1 class="line bordered">too much</h1>
     <h1 class="line">Rafaël Rozendaal</h1>
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation13.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation15.html">&#8594;</a></p>
+    <p class="nav"><a href="variation13.html">&#8592;</a> | <a href="variation15.html">&#8594;</a></p>
   </body>
 </html>
