--- a/project2/variation18.html
+++ b/project2/variation18.html
@@ -6,6 +6,7 @@
     <title>haiku 237 - Rafaël Rozendaal</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       .container p {
         font-family: 'Space Mono', monospace;
@@ -39,6 +40,6 @@
       <p class="jump">Rafaël Rozendaal</p>
     </div>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation17.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation19.html">&#8594;</a></p>
+    <p class="nav"><a href="variation17.html">&#8592;</a> | <a href="variation19.html">&#8594;</a></p>
   </body>
 </html>
