--- a/project2/variation23.html
+++ b/project2/variation23.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>haiku 237 - Rafaël Rozendaal</title>
     <link href="https://fonts.googleapis.com/css?family=Anton|Space+Mono" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <style>
       
       .title, .author, .hand {
@@ -79,6 +80,6 @@
     </div>
     <p class="author">Rafaël Rozendaal</p>
     
-    <p style="display: block; position: fixed; bottom: 3em; left: 1em; color: gray;"><a style="text-decoration: none; color: gray" href="variation22.html">&#8592;</a> | <a style="text-decoration: none; color: gray" href="variation24.html">&#8594;</a></p>
+    <p class="nav"><a href="variation22.html">&#8592;</a> | <a href="variation24.html">&#8594;</a></p>
   </body>
 </html>
