--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <ol>
   	<li><a href="https://twitter.com/AsrpbiauedOsdss">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
+    <li><a href="project3/ART369_CSS_Typeface_Sketches.pdf">css typeface</a></li>
   </ol>
 
   <p>interview</p>
