--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <ol>
   	<li><a href="https://twitter.com/AsrpbiauedOsdss">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
-    <li><a href="project3/v1/">css typeface (static)</a></li>
-    <li><a href="project3/">css typeface (responsive test)</a></li>
+    <li><a href="project3/index-min.html">css typeface</a></li>
   </ol>
 
   <p>interview</p>
