udpated index link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <ol>
   	<li><a href="https://twitter.com/AsrpbiauedOsdss">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
-    <li><a href="project3/index-min.html">css typeface</a></li>
+    <li><a href="project3/index.html">css typeface</a></li>
   </ol>
 
   <p>interview</p>
