--- a/project3/index.html
+++ b/project3/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Responsive Typeface Table</title>
+  <title>Let's Make a Poster</title>
   
   <link rel="stylesheet" href="assets/normalize.css">
   <link rel="stylesheet" href="assets/style.css" />
