--- a/project3/index.html
+++ b/project3/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Let's Make a Poster</title>
   
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
   <link rel="stylesheet" href="assets/normalize.css">
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
