--- a/project3/index.html
+++ b/project3/index.html
@@ -9,9 +9,11 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
   <link rel="stylesheet" href="assets/normalize.css">
   <link rel="stylesheet" href="assets/style.css" />
+<!--  <link rel="stylesheet" href="assets/simplebar.css" />-->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
   <script src="https://use.fontawesome.com/5ab40a9f63.js"></script>
+<!--  <script src="assets/simplebar.js"></script>-->
 <!-- To Do
   character escaping
   add apostraphes and quotes
@@ -27,15 +29,18 @@
     <div id="input-window">
       <div class="window-bar"><i class="fa fa-arrows" aria-hidden="true"></i></div>
       <form id="input-form">
-        <textarea id="input" rows="12" cols="24">-
-LET'S
--
-MAKE
--
-A
--
-POSTER
--</textarea>
+        <textarea id="input" rows="12" cols="24">(Let's make a poster!)
+O
+DAVID BIEDNY
+OO
+CONFESSIONS OF A DIGITAL MANIAC
+OOO
+10:30AM Tuesday April 18
+OOOO
+149 York St. DMCA
+OOOOO
+sponsored by the Yale School of Drama
+OOOOOO</textarea>
       </form>
         <button class="print-button">PRINT</button> 
     </div>
