updated default poster

--- a/project3/index.html
+++ b/project3/index.html
@@ -29,18 +29,20 @@
     <div id="input-window">
       <div class="window-bar"><i class="fa fa-arrows" aria-hidden="true"></i></div>
       <form id="input-form">
-        <textarea id="input" rows="12" cols="24">(Let's make a poster!)
+        <textarea id="input" rows="12" cols="24">O O O O
+OO OO OO OO
+OOOOOOOO
+OXOXOXOXO
+OOOOOOOOOO
 O
-DAVID BIEDNY
-OO
-CONFESSIONS OF A DIGITAL MANIAC
-OOO
-10:30AM Tuesday April 18
-OOOO
-149 York St. DMCA
-OOOOO
-sponsored by the Yale School of Drama
-OOOOOO</textarea>
+LONG LIVE COMMUNICATION
+DOWN WITH TELECOMMUNICATION
+(And down with all kings but King Ludd!)
+O
+A LECTURE BY
+VICTORIA SOBEL and CASEY GOLLAN
+32 EDG-EIK 7:30pm Friday, April 7
+O</textarea>
       </form>
         <button class="print-button">PRINT</button> 
     </div>
