--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
   <ul>
     <li>coming soon</li>
   </ul>
-
+  
+  <p>responses</p>
+  <ul>
+    <li><a href="responses.html">artist website</a></li>
+  </ul>
 </body>
 	
 </html>
