--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -1,1 +1,16 @@
-/*site with media quieries and one changing image */
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Would you like fries with that?</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
+</head>
+
+<body>
+  
+  
+</body>
+	
+</html>
