--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <p>exercises</p>
   <ol>
   	<li><a href="exercise1/">house of dust</a></li>
-  	<li><a href="exercise2/">carl dier markup</a></li>
-  	<li><a href="exercise3/">carl dier style</a></li>
+  	<li><a href="exercise2/">css: carl dier markup</a></li>
+  	<li><a href="exercise3/">css: carl dier style</a></li>
+  	<li><a href="exercise4/">css: still life</a></li>
+  	<li><a href="exercise5/">media queries: would you like fries with that?</a></li>
+  	<li><a href="exercise6/">jquery</a></li>
   </ol>
 
   <p>projects</p>
