--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <p>interview</p>
   <ul>
-    <li>coming soon</li>
+    <li><a href="interview/">with justin berry</a></li>
   </ul>
   
   <p>responses</p>
