--- a/project4/Old/escaped.html
+++ b/project4/Old/escaped.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" type="text/css" />
-</head>
-
-<body>
-  <div id="container">
-    <div class="top">
-      <h1>CERTIFICATE</h1>
-    </div>
-    <div class="middle">
-      <h2>This is to certify that the Sol Lewitt web drawing number 1 evidenced by this certificate is authentic.</h2>
-    </div>
-    <div class="middle">
-      <h3>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</h3>
 <pre><code class="javascript">(function&nbsp;()&nbsp;{</code>
 <code class="javascript">&nbsp;&nbsp;var&nbsp;body&nbsp;=&nbsp;document.body</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;html&nbsp;=&nbsp;document.documentElement;</code>
-<code>&nbsp;&nbsp;var&nbsp;fullHeight&nbsp;=&nbsp;Math.max(body.scrollHeight,&nbsp;body.offsetHeight,&nbsp;html.clientHeight,&nbsp;html.scrollHeight,&nbsp;html.offsetHeight);</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;html&nbsp;= document.documentElement;</code>
+<code>&nbsp;&nbsp;var&nbsp;fullHeight&nbsp;=&nbsp;Math.max(body.scrollHeight, body.offsetHeight,&nbsp;html.clientHeight,&nbsp;html.scrollHeight, html.offsetHeight);</code>
 <code class="javascript">&nbsp;&nbsp;var&nbsp;fullWidth&nbsp;=&nbsp;document.body.clientWidth;</code>
 <code class="javascript"></code>
 <code class="javascript">&nbsp;&nbsp;function&nbsp;getOffset(el)&nbsp;{</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;el&nbsp;=&nbsp;el.getBoundingClientRect();</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;return&nbsp;{</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;left:&nbsp;el.left ;+&nbsp;window.scrollX&nbsp;+&nbsp;(el.width&nbsp;/&nbsp;2)</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;left:&nbsp;el.left + window.scrollX&nbsp;+&nbsp;(el.width&nbsp;/&nbsp;2)</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;top:&nbsp;el.top&nbsp;+&nbsp;window.scrollY&nbsp;+&nbsp;(el.height&nbsp;/&nbsp;2)</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;}</code>
 <code class="javascript">&nbsp;&nbsp;}</code>
@@ -90,19 +70,3 @@
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;};</code>
 <code class="javascript">&nbsp;&nbsp;}</code>
 <code class="javascript">})();</code></pre>
-      
-    </div>
-    <div class="middle">
-      This certification is the signature for the web drawing and must accompany the web drawing if it is sold or otherwise transferred.
-    </div>
-    <div class="bottom">
-    <form method="get" action="LeWitt_web-drawing-number-1.zip">
-    <button type="submit">Download</button>
-    </form>
-    </div>
-    
-      <p class="note">inspired by <a href="https://www.pinterest.com/pin/108790147220076855/">Sol LeWitt, From the Word &ldquo;Art&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the Words &ldquo;Art&rdquo; on the Printed Page, 1972</a></p>
-  </div>
-</body>
-
-</html>
