updating homepage to link to p4

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   	<li><a href="https://twitter.com/AsrpbiauedOsdss">visual translation</a></li>
     <li><a href="project2/">25 variations</a></li>
     <li><a href="project3/index.html">css typeface</a></li>
+    <li><a href="project4/index.html">artist's website</a></li>
   </ol>
 
   <p>interview</p>
