updated p4 piece title

--- a/project4/index.html
+++ b/project4/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</title>
+  <title>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;on the Digital Page, 2017</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" type="text/css" />
@@ -17,7 +17,7 @@
       <h2>This is to certify that the Sol Lewitt web drawing number 1 evidenced by this certificate is authentic.</h2>
     </div>
     <div class="middle">
-      <h3>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</h3>
+      <h3>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo; on the Digital Page, 2017</h3>
 <pre><code class="javascript">(function&nbsp;()&nbsp;{</code>
 <code class="javascript">&nbsp;&nbsp;var&nbsp;body&nbsp;=&nbsp;document.body</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;html&nbsp;=&nbsp;document.documentElement;</code>
